--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ a{
   text-align: center;
   background-color: #A88D72;
   width: 350px;
-  padding: 20px ;
+  padding: 20px;
 }
 .secondary a{
   font-size: 20px;
@@ -98,6 +98,7 @@ a{
 }
 
 #background-video {
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.è())) ;
   width: calc(100vw - 18px);
   height: 80vh;
   object-fit: cover;
@@ -255,6 +256,360 @@ padding: 30px 0 0 0 ;
   display: flex;
   justify-content: center;
   gap: 50px;
+  padding: 30px 0 0 0;
+}
+.think img{
+  width: 500px;
+}
+.think-content{
+  display: block;
+ padding: 150px 0 0 0;
+ margin-left: 50px;
+}
+
+.think-content h2{
+  font-size: 40px;
+}
+.think-content a{
+  border: 2px solid #fff;
+  border-radius: 25px;
+  padding: 12px;
+  text-align: center;
+  background-color: #bb9f82;
+  width: 350px;
+  padding: 20px;
+  margin-top: 40px;
+  font-size: 20px;
+  font-weight: bold;
+}
+.services-cards ul{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 50px;
+}
+.services-cards ul li{
+  list-style-type: none;
+  box-shadow: 0 0 10px 2px rgba(0,0,0,0.1);
+  border-radius: 35px;
+  background-color: #fff;
+  padding: 0 50px 50px 50px;
+}
+.services-cards ul li img{
+  height: 40px;
+  display: block;
+  margin: 0 auto;
+}
+
+.services-cards h3{
+  font-size: 20px;
+  text-align: center;
+}
+.services-cards p{
+  font-size: 15px;
+  text-align: center;
+}
+.infos{
+  display: flex;
+  justify-content: space-around;
+background-color: #000;
+}
+.infos a{
+  margin-right: 20px;
+  font-size: 20px;
+  color: #fff;
+}
+.infos-content{
+  padding: 50px 0 0 0;
+}
+.infos-content a:hover{
+  color: #b1977e;
+  }
+.social-media-links h4{
+  color: white;
+  font-size: 20px;
+}
+.social-media-links img{
+width: 28px;
+height: 28px;
+}
+.social-media-links{
+  padding-bottom: 50px;
+}
+footer{
+  background-color: #000;
+  color: #fff;
+}
+footer h3{
+  color: white;
+  text-align: center;
+  font-size: 18px;
+}
+.footer-infos{
+  border-top: 2px solid #b1977e;
+  padding-bottom: 10px;
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100;200&family=Roboto+Slab:wght@900&family=Roboto:wght@500&display=swap');
+
+body{
+  background: linear-gradient(130deg, #b1977e, #fff);
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  width: 100%;
+  padding: 0;
+}
+.container{
+  background-image: linear-gradient(rgba(0,0,0,0.50),rgba(0,0,0,0.50)), url(img/hero.png) ;
+  background-position: center ;
+  background-size: cover;
+}
+.navbar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 15px 0 0 0;
+}
+
+.logo svg{
+width: 70px;
+fill: white;
+padding: 10px;
+}
+.logo{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: white;
+  font-size: 20px;
+}
+
+.menu ul{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  list-style-type: none;
+}
+a{
+  text-decoration: none;
+  color: #fff ;
+}
+.menu a:hover{
+  color: #000;
+}
+
+.primary{
+  border: 2px solid #fff;
+  border-radius: 25px;
+  padding: 12px;
+  text-align: center;
+  background-color: transparent;
+  width: 150px;
+  padding: 10px;
+}
+.primary a{
+  font-size: 20px;
+  font-weight: bold;   
+}
+.hero{
+ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 97.9vw;
+  height: 50vh;
+}
+.hero h1{
+  font-size: 70px;
+  text-align: center;
+  color: white;
+
+}
+.hero p{
+  font-size: 30px;
+  color: white; 
+}
+.hero span{
+  color: #A88D72;
+  font-size: 75px;
+}
+.secondary{
+  border: 2px solid #fff;
+  border-radius: 25px;
+  padding: 12px;
+  text-align: center;
+  background-color: #A88D72;
+  width: 350px;
+  padding: 20px;
+}
+.secondary a{
+  font-size: 20px;
+  font-weight: bold;   
+}
+
+#background-video {
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.è())) ;
+  width: calc(100vw - 18px);
+  height: 80vh;
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom:0;
+  z-index: 0;
+}
+
+
+.video-content{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.video-discreption{
+  z-index: 1;
+  text-align: center;
+ padding: 100px;
+}
+
+.video-discreption h2{
+  font-size: 35px;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+.video-discreption:hover{
+  background-color: #000;
+  width: 500px;
+}
+.video-discreption  p{
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  padding: 30px 0 0 0;
+}
+
+.about-us{
+  display: flex;
+  align-items: center;
+   gap: 35px;
+  color: #000;
+  padding: 150px 0 0 0 ;
+}
+.about-us h2{
+font-weight: bold;
+font-size: 25px;
+}
+.about-us p{
+  font-size: 20px;
+}
+.about-us img{
+  width: 250px;
+  border-radius: 35px;
+}
+.designs-cards{
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+.designs-cards p{
+  font-size: 20px;
+  font-weight: bold;
+}
+.designs-cards h2{
+  font-size: 35px;
+  font-weight: bold;
+}
+.designs-cards::-webkit-scrollbar {
+  -ms-overflow-style: none;
+  overflow: -moz-scrollbars-none;
+  display: none;
+  width: 0;
+  background: transparent;
+  background-color: transparent;
+}
+.designs-cards h2,p{
+  text-align: center;
+}
+.designs-cards ul{
+  display: flex;
+  color: #000;
+  gap: 10px;
+  width: 100%;
+  
+
+}
+.designs-cards ul li{
+  list-style-type: none;
+  box-shadow: 0 0 10px 2px rgba(0,0,0,0.1);
+  border-radius: 35px;
+  background: linear-gradient(250deg, #A88D72, #fff);
+  border-top-right-radius: 10%;
+  border-top-left-radius: 10%;
+}
+.designs-cards ul img{
+width: 500px;
+height: 500px;
+}
+.designs-cards h3{
+  text-align: center;
+  font-size: 25px;
+}
+
+.fonction h2{
+  text-align: center;
+  color: #000;
+}
+.fonction p{
+  text-align: center;
+  color: #000;
+}
+.fonction-button{
+text-align: center;
+font-size: 25px;
+padding: 30px 0 0 0 ;
+}
+
+.fonction-button a{
+  margin-left: 20px;
+  border: 2px solid black;
+  border-radius: 25px;
+  padding: 10px 70px;
+  
+}
+.fonction-button a:hover{
+  color:burlywood ;
+}
+.fonction-button a:active{
+  background-color:#A88D72;
+}
+
+.fonction-content{
+ border: 5px dashed black;
+ width: 500px;
+ margin-left: 500px;
+ margin-top: 50px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+}
+.fonction-content img{
+  width: 100px;
+  text-align: center;
+  padding: 20px;
+}
+
+
+.think{
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  padding: 30px 0 0 0;
 }
 .think img{
   width: 500px;
